--- a/Arcade/src/application/Arcade.fxml
+++ b/Arcade/src/application/Arcade.fxml
@@ -14,18 +14,18 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="771.0" prefWidth="800.0">
                      <children>
-                        <Label layoutX="307.0" layoutY="25.0" text="Utilisateurs">
+                        <Label layoutX="314.0" layoutY="27.0" text="Bienvenue">
                            <font>
                               <Font name="Rockwell" size="36.0" />
                            </font>
                         </Label>
                         <ComboBox fx:id="cboUtilisateur" layoutX="212.0" layoutY="147.0" onAction="#confirmezChoix" prefHeight="42.0" prefWidth="377.0" />
-                        <Label layoutX="256.0" layoutY="84.0" text="Choissisez un utilisateur">
+                        <Label layoutX="257.0" layoutY="84.0" text="Choissisez un utilisateur">
                            <font>
                               <Font name="Rockwell" size="26.0" />
                            </font>
                         </Label>
-                        <Button layoutX="295.0" layoutY="224.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="212.0" text="Ajoutez un utilisateur">
+                        <Button layoutX="295.0" layoutY="224.0" mnemonicParsing="false" onAction="#handleNewUtilisateur" prefHeight="32.0" prefWidth="212.0" text="Ajoutez un utilisateur">
                            <font>
                               <Font name="Rockwell" size="12.0" />
                            </font>
@@ -52,8 +52,8 @@
                                     <Font name="Rockwell" size="25.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="txtFNom" prefHeight="43.0" prefWidth="559.0" GridPane.columnIndex="1" />
-                              <TextField fx:id="txtFSurnom" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtFNom" editable="false" prefHeight="43.0" prefWidth="559.0" GridPane.columnIndex="1" />
+                              <TextField fx:id="txtFSurnom" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label fx:id="lblCredits" alignment="CENTER" prefHeight="43.0" prefWidth="432.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                  <font>
                                     <Font name="Rockwell" size="25.0" />
@@ -76,13 +76,14 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                         </GridPane>
-                        <HBox layoutX="154.0" layoutY="488.0" spacing="50.0">
+                        <HBox layoutX="155.0" layoutY="493.0" spacing="50.0">
                            <children>
-                              <Button fx:id="btnAjoutezCredits1" layoutX="150.0" layoutY="482.0" mnemonicParsing="false" text="Achetez 1 Crédit" />
-                              <Button fx:id="btnAjoutezCredits2" layoutX="338.0" layoutY="482.0" mnemonicParsing="false" text="Achetez 5 Crédits" />
-                              <Button fx:id="btnAjoutezCredits3" layoutX="527.0" layoutY="482.0" mnemonicParsing="false" text="Achetez 69 Crédits" />
+                              <Button fx:id="btnAjoutezCredits1" disable="true" layoutX="150.0" layoutY="482.0" mnemonicParsing="false" onAction="#AjoutezCredits1" text="Achetez 1 Crédit" />
+                              <Button fx:id="btnAjoutezCredits2" disable="true" layoutX="338.0" layoutY="482.0" mnemonicParsing="false" onAction="#AjoutezCredits2" text="Achetez 5 Crédits" />
+                              <Button fx:id="btnAjoutezCredits3" disable="true" layoutX="527.0" layoutY="482.0" mnemonicParsing="false" onAction="#AjoutezCredits3" text="Achetez 20 Crédits" />
                            </children>
                         </HBox>
+                        <Button fx:id="btnJouez" disable="true" layoutX="322.0" layoutY="567.0" mnemonicParsing="false" onAction="#jouerSnake" prefHeight="63.0" prefWidth="156.0" styleClass="success" text="Jouez!" />
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -106,9 +107,6 @@
                         <GridPane layoutX="50.0" layoutY="468.0" prefHeight="172.0" prefWidth="700.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="353.0" minWidth="10.0" prefWidth="154.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="562.0" minWidth="10.0" prefWidth="42.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="562.0" minWidth="10.0" prefWidth="40.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="562.0" minWidth="10.0" prefWidth="29.0" />
                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="562.0" minWidth="10.0" prefWidth="459.0" />
                           </columnConstraints>
                           <rowConstraints>
@@ -138,30 +136,10 @@
                                     <Font name="Rockwell" size="25.0" />
                                  </font>
                               </Label>
-                              <Button fx:id="btnCredits1" mnemonicParsing="false" prefHeight="45.0" prefWidth="49.0" styleClass="success" text="+" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="btnCredits2" mnemonicParsing="false" prefHeight="45.0" prefWidth="49.0" styleClass="danger" text="-" GridPane.columnIndex="2" GridPane.rowIndex="2">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="btnPoints1" mnemonicParsing="false" prefHeight="45.0" prefWidth="49.0" styleClass="success" text="+" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="btnPoints2" mnemonicParsing="false" prefHeight="45.0" prefWidth="49.0" styleClass="danger" text="-" GridPane.columnIndex="2" GridPane.rowIndex="3">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Button>
-                              <TextField fx:id="txtNom" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="4" />
-                              <TextField fx:id="txtSurnom" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                              <TextField fx:id="txtCredits" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                              <TextField fx:id="txtPoints" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                              <TextField fx:id="txtNom" onAction="#verifCredits" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="1" />
+                              <TextField fx:id="txtSurnom" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtCredits" onKeyReleased="#verifCredits" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="txtPoints" prefHeight="51.0" prefWidth="456.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                            </children>
                         </GridPane>
                         <HBox layoutX="67.0" layoutY="676.0" spacing="50.0">
